# SpamProtection-rs

./: Cargo.toml  README.org  cratesio.md
examples/: cli-arg.rs
src/: lib.rs
src/info/: mod.rs  structs.rs
src/info/structs/: mod.rs
tests/: ptid.rs
