[package]
name = "spamprotection"
version = "0.1.0-2"
edition = "2018"
description = "A rust wrapper for the SpamProtection API"
license = "GPL-3.0"
repository = "https://github.com/cyberknight777/spamprotection-rs"
readme = "cratesio.md"
authors = ["@PeroSar <perosar1111@gmail.com>", "@cyberknight777 <cyberknight755@gmail.com>"]

[dependencies]
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
serde = { version = "1.0.130", features = ["derive"] }
